# xrs

./: .gitignore  Cargo.toml  TODO.org  build.bat  why-does-this-work.rs
csv/: Cargo.toml
csv/src/: main.rs
examples/: Cargo.toml  and-then-combinator.rs  associated-items.rs  cli-demo.rs  closures.rs  compression.rs  control-flow.rs  custom-types.rs  errors.rs  fibonacci-iter.rs  generics.rs  high-order-func.rs  impl-trait.rs  intro.rs  linked-list.rs  macro.rs  map-combinator.rs  match-ref-binding.rs  newtype.rs  option.rs  question.rs  rectangle-sort.rs  rng.rs  sorting.rs  super-self.rs  wheres.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs  rand.rs
intro/: Cargo.toml
io/: Cargo.toml
io/src/: main.rs
pastebin/: Cargo.toml
pastebin/data/: 03PEB
pastebin/src/: main.rs  paste_id.rs
primitives/: Cargo.toml
primitives/src/: main.rs
rand/: Cargo.toml
rand/src/: lib.rs
rectangle_sort/: Cargo.toml
src/: main.rs
std/: Cargo.toml  vector.rs  vector_example.rs
