[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "intro"
path = "intro.rs"

[[bin]]
name = "io"
path = "io.rs"

[[bin]]
name = "csv"
path = "csv.rs"

[[bin]]
name = "primitives"
path = "primitives.rs"

[[bin]]
name = "rectangle-sort"
path = "rectangle-sort.rs"

[[bin]]
name = "custom-types"
path = "custom-types.rs"

[[bin]]
name = "linked-list"
path = "linked-list.rs"
