[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "intro"
path = "intro.rs"

[[bin]]
name = "errors"
path = "errors.rs"

[[bin]]
name = "io"
path = "io.rs"

[[bin]]
name = "csv"
path = "csv.rs"

[[bin]]
name = "primitives"
path = "primitives.rs"

[[bin]]
name = "custom-types"
path = "custom-types.rs"

[[bin]]
name = "linked-list"
path = "linked-list.rs"

[[bin]]
name = "match-ref-binding"
path = "match-ref-binding.rs"

[[bin]]
name = "control-flow"
path = "control-flow.rs"

[[bin]]
name = "closures"
path = "closures.rs"

[[bin]]
name = "high-order-func"
path = "high-order-func.rs"

[[bin]]
name = "super-self"
path = "super-self.rs"

[[bin]]
name = "generics"
path = "generics.rs"

[[bin]]
name = "wheres"
path = "wheres.rs"

[[bin]]
name = "newtype"
path = "newtype.rs"

[[bin]]
name = "associated-items"
path = "associated-items.rs"

[[bin]]
name = "fibonacci-iter"
path = "fibonacci-iter.rs"

[[bin]]
name = "impl-trait"
path = "impl-trait.rs"

[[bin]]
name = "macro"
path = "macro.rs"

[[bin]]
name = "option"
path = "option.rs"

[[bin]]
name = "question"
path = "question.rs"

[[bin]]
name = "map-combinator"
path = "map-combinator.rs"

[[bin]]
name = "and-then-combinator"
path = "and-then-combinator.rs"

[[bin]]
name = "rng"
path = "rng.rs"

[[bin]]
name = "sorting"
path = "sorting.rs"

[[bin]]
name = "cli-demo"
path = "cli-demo.rs"

[[bin]]
name = "compression"
path = "compression.rs"

[dependencies]
clap = "4.5.23"
flate2 = "1.0.35"
rand = "0.8.5"
rand_distr = "0.4.3"
tar = "0.4.43"

